
2016-06-02  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y (display_atom): fixed bug #243, which was caused by a
	  begin_implicit_statement causing exceptions to be set to off before
	  checking which exception handler to go to.
	* codegen.c: fixed another cause of bug #243, where only EC-IMP-DISPLAY
	  (and not EC-SCREEN) triggered the ON EXCEPTION phrase. As part of
	  this, refactored the handling of exception handlers.
	* tree.h (cb_statement): renamed handler1 and handler2 to ex_handler and
	  not_ex_handler, respectively.

2016-06-01  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y: fixed bug #242 and allowed exception handlers to be in any
	  order.

2016-05-31 Brian Tiffin <btiffin@gnu.org>

	* typeck.c: fix bug #235 ADD/SUBTRACT CORRESPONDING only for NUMERIC items.

2016-05-31  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y: fixed bug #47 - tightened INSPECT syntax rules.

2016-05-22  Edward Hart <edward.dan.hart@gmail.com>

	* tree.c, field.c, codegen.c: replaced PICTURE strings containing packed ints with
	  array of (cob_pic_symbol) structs which are easier to use.
	* codegen.c (codegen): split large chunks of code in separate functions.

2016-05-21 Brian Tiffin <btiffin@gnu.org>

	* codegen.c: improving CALL BY VALUE. One step of many, more to do.

2016-05-20  Edward Hart <edward.dan.hart@gmail.com>

	* tree.c: fixed bug #232, tightening permitted PICTURE strings and
	  improving error messages.
	* field.c: improved error checking for BLANK WHEN ZERO with invalid
	  PICs.

2016-05-16 Brian Tiffin <btiffin@gnu.org>

	* codeoptim.c: bug #229, missed patching cob_cmp_align_u64.

2016-05-15 Brian Tiffin <btiffin@gnu.org>

	* cobc.c: correct process_run return code for systems with WEXITSTATUS

2016-04-24  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y: implement STOP RUN integer/identifier (RM/COBOL extension)
	* parser.y, pparse.y: remove printf non literal spec warning.
