@@ -69,3 +69,4 @@ CB_CONFIG_SUPPORT (cb_call_overflow, "call-overflow")
 CB_CONFIG_SUPPORT (cb_numeric_boolean, "numeric-boolean")
 CB_CONFIG_SUPPORT (cb_acucobol_literals, "acucobol-literals")
 CB_CONFIG_SUPPORT (cb_word_continuation, "word-continuation")
+CB_CONFIG_SUPPORT (cb_not_exception_before_exception, "not-exception-before-exception")
