@@ -150,6 +150,7 @@ value-of-clause:			obsolete # not verified yet
 numeric-boolean:			unconformable
 acucobol-literals:			ok
 word-continuation:			ok
+not-exception-before-exception:		unconformable
 
 # If yes, all the reserved words must be specified in a list of reserved:
 # entries; the default reserved word list will not be used.
