@@ -151,6 +151,7 @@ value-of-clause:			obsolete
 numeric-boolean:			unconformable
 acucobol-literals:			unconformable
 word-continuation:			ok
+not-exception-before-exception:		unconformable
 
 # If yes, all the reserved words must be specified in a list of reserved:
 # entries; the default reserved word list will not be used.
