@@ -157,6 +157,7 @@ value-of-clause:			obsolete
 numeric-boolean:			unconformable
 acucobol-literals:			unconformable
 word-continuation:			warning
+not-exception-before-exception:		ok
 
 # If yes, all the reserved words must be specified in a list of reserved:
 # entries; the default reserved word list will not be used.
