@@ -153,6 +153,7 @@ value-of-clause:			obsolete
 numeric-boolean:			ok
 acucobol-literals:			ok
 word-continuation:			ok
+not-exception-before-exception:		unconformable
 
 # If yes, all the reserved words must be specified in a list of reserved:
 # entries; the default reserved word list will not be used.
